# SimpleClientServerApp

./: README.md
ClientServer/: CMakeLists.txt  clientwidget.cpp  clientwidget.h  clientwidget.ui  connectionsettingswidget.cpp  connectionsettingswidget.h  connectionsettingswidget.ui  data.cpp  data.h  main.cpp  myvalidators.cpp  myvalidators.h  openclientserverwidget.cpp  openclientserverwidget.h  openclientserverwidget.ui  serverwidget.cpp  serverwidget.h  serverwidget.ui  udpclient.cpp  udpclient.h  udpserver.cpp  udpserver.h
